--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "author": "satyendra singh",
   "license": "MIT",
   "scripts": {
-    "serve": "live-server public/",
+    
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json",
-    "start":"node server/server.js",
-    "heroku-postbuild":"yarn run build:prod"
+    "start": "node server/server.js",
+    "heroku-postbuild": "yarn run build:prod"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
@@ -22,13 +22,9 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
-    "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
-    "enzyme-to-json": "3.0.1",
     "express": "4.15.4",
-    "extract-text-webpack-plugin": "3.0.0",
-    "jest": "20.0.4",
-    "live-server": "^1.2.1",
+    "extract-text-webpack-plugin": "3.0.0", 
     "moment": "2.18.1",
     "node-sass": "4.14.1",
     "normalize.css": "8.0.1",
@@ -41,14 +37,23 @@
     "react-model": "2.2.2",
     "react-redux": "5.0.5",
     "react-router-dom": "5.1.2",
-    "react-test-renderer": "16.0.0",
     "redux": "4.0.5",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "uuid": "3.1.0",
     "validator": "8.0.0",
     "var": "0.4.0",
-    "webpack": "3.1.0",
+    "webpack": "3.1.0"
+   
+  },
+  "devDependencies": {
+    "enzyme": "3.0.0",
+    "enzyme-to-json": "3.0.1",
+    "jest": "20.0.4",
+    "live-server": "^1.2.1",
+    "serve": "live-server public/",
+    "react-test-renderer": "16.0.0",
     "webpack-dev-server": "2.5.1"
+
   }
 }
