--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "satyendra singh",
   "license": "MIT",
   "scripts": {
-    
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
@@ -24,10 +23,11 @@
     "css-loader": "0.28.4",
     "enzyme-adapter-react-16": "1.0.0",
     "express": "4.15.4",
-    "extract-text-webpack-plugin": "3.0.0", 
+    "extract-text-webpack-plugin": "3.0.0",
     "moment": "2.18.1",
     "node-sass": "4.14.1",
     "normalize.css": "8.0.1",
+    "numeral": "2.0.6",
     "raf": "3.3.2",
     "react": "16.13.1",
     "react-addons-shallow-compare": "15.6.0",
@@ -44,16 +44,14 @@
     "validator": "8.0.0",
     "var": "0.4.0",
     "webpack": "3.1.0"
-   
   },
   "devDependencies": {
     "enzyme": "3.0.0",
     "enzyme-to-json": "3.0.1",
     "jest": "20.0.4",
     "live-server": "^1.2.1",
-    "serve": "live-server public/",
     "react-test-renderer": "16.0.0",
+    "serve": "live-server public/",
     "webpack-dev-server": "2.5.1"
-
   }
 }
