--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "react-redux": "5.0.5",
     "react-router-dom": "5.1.2",
     "redux": "4.0.5",
+    "redux-mock-store": "1.2.3",
+    "redux-thunk": "2.2.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "uuid": "3.1.0",
