set up test database env

--- a/jest.config.json
+++ b/jest.config.json
@@ -5,6 +5,9 @@
     "setupFiles": [
         "raf/polyfill",
         "<rootDir>/src/tests/setupTests.js"
+    ],
+    "setupFiles":[
+        "<rootDir>/src/tests/setupTests.js"
     ]
    
    }
