--- a/jest.config.json
+++ b/jest.config.json
@@ -2,9 +2,8 @@
 
 
 {
-    "setupFiles": [
-        "raf/polyfill",
-        "<rootDir>/src/tests/setupTests.js"
+    "snapshotSerializers": [
+        "enzyme-to-json/serializer"
     ],
     "setupFiles":[
         "<rootDir>/src/tests/setupTests.js"
